--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
-    "@material/typography": "^3.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "file-loader": "^6.0.0",
@@ -15,7 +14,6 @@
     "style-loader": "^0.23.1",
     "svelte": "^3.20.1",
     "svelte-loader": "^2.13.6",
-    "svelte-material-ui": "^1.0.0-beta.20",
     "svelte-preprocess": "^3.7.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
@@ -25,5 +23,7 @@
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack-dev-server --content-base public"
   },
-  "dependencies": {}
+  "dependencies": {
+    "svelte-routing": "^1.4.2",
+  }
 }
