feat(home): Home page integrate with custom data
- Fake server added for testing `

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "dev": "webpack-dev-server --content-base public"
   },
   "dependencies": {
-    "svelte-routing": "^1.4.2",
+    "svelte-routing": "^1.4.2"
   }
 }
